汉化，功能晚上，界面更改

--- a/WizGroup/en.lproj/Localizable.strings
+++ b/WizGroup/en.lproj/Localizable.strings
@@ -215,3 +215,5 @@
 "download successfully"="download successfully";
 "find %d notes"="find %d notes";
 "notes"="notes";
+"New"="New";
+"Unread Notes"="Unread Notes";
