主界面修改

--- a/WizGroup/zh-Hans.lproj/Localizable.strings
+++ b/WizGroup/zh-Hans.lproj/Localizable.strings
@@ -221,3 +221,6 @@
 "Loading..." = "加载中";
 "Pull down to refresh..."= "下拉以刷新";
 "Last Updated" = "最后更新";
+"Recent" = "最新";
+"Add Group" = "新增栏目";
+"Click To Login" = "点击以登陆";
